--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ember-london",
+  "name": "emberlondon",
   "version": "0.0.0",
   "private": true,
   "directories": {
@@ -20,14 +20,19 @@
   "devDependencies": {
     "body-parser": "^1.2.0",
     "broccoli-asset-rev": "0.3.1",
+    "broccoli-clean-css": "^0.3.0",
     "broccoli-ember-hbs-template-compiler": "^1.6.1",
-    "ember-cli": "0.1.2",
+    "ember-cli": "^0.1.14",
+    "ember-cli-autoprefixer": "^0.2.0",
     "ember-cli-content-security-policy": "0.3.0",
-    "ember-export-application-global": "^1.0.0",
+    "ember-cli-divshot": "^0.1.6",
+    "ember-cli-foundation-sass": "^1.0.1",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.1.0",
+    "ember-cli-sass": "^3.0.3",
     "ember-data": "1.0.0-beta.10",
+    "ember-export-application-global": "^1.0.0",
     "express": "^4.8.5",
     "glob": "^4.0.5"
   }
