--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,8 @@
     "ember-qunit-notifications": "0.0.4",
     "qunit": "~1.15.0",
     "foundation": "~5.4.7"
+  },
+  "resolutions": {
+    "jquery": ">= 1.7.0 < 2.2.0"
   }
 }
