--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ script:
 deploy:
   provider: divshot
   environment:
-    develop: development
-    master: production
+    development: develop
+    production: master
   skip_cleanup: true
   api_key:
     secure: Okgg8G2FvuJd9yaasqXbq0M8zISd/13fMHE9ntjT7J2xh0XnbXzylAtziqIbjNrhPyBWUdPmVo/onxfE9Oeaz4LZ4aiL1Hd3dAt/esCkQ0G9wTMGFg0VP0DykvjZ7q6b7xsSLDIKZJbj540SBPWB2AAiDG2+v9q7vyfxMa4dGIo=
