--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,6 @@
     "ember-qunit": "0.2.8",
     "ember-qunit-notifications": "0.0.7",
     "qunit": "~1.17.1",
-    "foundation": "~5.4.7",
-    "handlebars": "~1.3.0"
+    "foundation": "~5.5.0"
   }
 }
